--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.3",
     "react-iframe": "^1.8.5",
+    "react-konva": "^18.2.5",
     "react-moment": "^1.1.3",
     "react-number-format": "^5.1.3",
     "react-redux": "^8.0.5",
